// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`beta tags 1`] = `
Object {
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [my-lib](./my-lib.md) |  |

",
  "foo/my-lib.animal.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.animal
hide_title: true
title: Animal interface
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Animal](./my-lib.animal.md)

## Animal interface

An interface to define an animal

**Signature:**

\`\`\`typescript
export interface Animal 
\`\`\`

## Example

Here's a simple example:

\`\`\`ts
class Cow implements Animal {
  speak() {
    return 'mooo';
  }
}
\`\`\`

## Methods

|  Method | Description |
|  --- | --- |
|  [speak()](./my-lib.animal.speak.md) |  |

",
  "foo/my-lib.animal.speak.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.animal.speak
hide_title: true
title: Animal.speak() method
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Animal](./my-lib.animal.md) &gt; [speak](./my-lib.animal.speak.md)

## Animal.speak() method

**Signature:**

\`\`\`typescript
speak(): string;
\`\`\`
**Returns:**

string

",
  "foo/my-lib.animaloptions.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.animaloptions
hide_title: true
title: AnimalOptions interface
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [AnimalOptions](./my-lib.animaloptions.md)

## AnimalOptions interface

Constructor options for [Animal](./my-lib.animal.md)

**Signature:**

\`\`\`typescript
export interface AnimalOptions 
\`\`\`

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [name](./my-lib.animaloptions.name.md) | string |  |

",
  "foo/my-lib.animaloptions.name.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.animaloptions.name
hide_title: true
title: AnimalOptions.name property
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [AnimalOptions](./my-lib.animaloptions.md) &gt; [name](./my-lib.animaloptions.name.md)

## AnimalOptions.name property

**Signature:**

\`\`\`typescript
name: string;
\`\`\`
",
  "foo/my-lib.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.bar
hide_title: true
title: bar variable
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [bar](./my-lib.bar.md)

## bar variable


**Signature:**

\`\`\`typescript
bar = \\"bard\\"
\`\`\`
",
  "foo/my-lib.bizz._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.bizz._constructor_
hide_title: true
title: Bizz.(constructor)
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Bizz](./my-lib.bizz.md) &gt; [(constructor)](./my-lib.bizz._constructor_.md)

## Bizz.(constructor)

Constructs a new instance of the \`Bizz\` class

**Signature:**

\`\`\`typescript
constructor(bar?: string);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  bar | string |  |

",
  "foo/my-lib.bizz.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.bizz.bar
hide_title: true
title: Bizz.bar property
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Bizz](./my-lib.bizz.md) &gt; [bar](./my-lib.bizz.bar.md)

## Bizz.bar property

**Signature:**

\`\`\`typescript
bar: string;
\`\`\`
",
  "foo/my-lib.bizz.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.bizz.foo
hide_title: true
title: Bizz.foo() method
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Bizz](./my-lib.bizz.md) &gt; [foo](./my-lib.bizz.foo.md)

## Bizz.foo() method

**Signature:**

\`\`\`typescript
foo(): number;
\`\`\`
**Returns:**

number

1

",
  "foo/my-lib.bizz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.bizz
hide_title: true
title: Bizz class
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Bizz](./my-lib.bizz.md)

## Bizz class


**Signature:**

\`\`\`typescript
export declare class Bizz 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(bar)](./my-lib.bizz._constructor_.md) |  | Constructs a new instance of the <code>Bizz</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [bar](./my-lib.bizz.bar.md) |  | string |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./my-lib.bizz.foo.md) |  |  |

",
  "foo/my-lib.box._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.box._constructor_
hide_title: true
title: Box.(constructor)
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Box](./my-lib.box.md) &gt; [(constructor)](./my-lib.box._constructor_.md)

## Box.(constructor)

Constructs a new instance of the \`Box\` class

**Signature:**

\`\`\`typescript
constructor(boxee: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  boxee | T |  |

",
  "foo/my-lib.box.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.box
hide_title: true
title: Box class
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Box](./my-lib.box.md)

## Box class

Boxes an unknown value and unwraps it

**Signature:**

\`\`\`typescript
export declare class Box<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(boxee)](./my-lib.box._constructor_.md) |  | Constructs a new instance of the <code>Box</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [unwrap()](./my-lib.box.unwrap.md) |  | Returns the raw underlying value |

",
  "foo/my-lib.box.unwrap.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.box.unwrap
hide_title: true
title: Box.unwrap() method
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Box](./my-lib.box.md) &gt; [unwrap](./my-lib.box.unwrap.md)

## Box.unwrap() method

Returns the raw underlying value

**Signature:**

\`\`\`typescript
unwrap(): T;
\`\`\`
**Returns:**

T

T

",
  "foo/my-lib.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.foo
hide_title: true
title: foo variable
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [foo](./my-lib.foo.md)

## foo variable

> This API is provided as a preview for developers and may change based on feedback that we receive. Do not use this API in a production environment.
> 

some thing is beta

**Signature:**

\`\`\`typescript
foo = \\"fosso\\"
\`\`\`
",
  "foo/my-lib.get.get.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.get.get
hide_title: true
title: Get.get() method
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Get](./my-lib.get.md) &gt; [get](./my-lib.get.get.md)

## Get.get() method

**Signature:**

\`\`\`typescript
get(): string;
\`\`\`
**Returns:**

string

",
  "foo/my-lib.get.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.get
hide_title: true
title: Get class
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Get](./my-lib.get.md)

## Get class

A Get class to get an empty string

**Signature:**

\`\`\`typescript
export declare class Get implements Getter 
\`\`\`
**Implements:** [Getter](./my-lib.getter.md)

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [get()](./my-lib.get.get.md) |  |  |

",
  "foo/my-lib.getter.get.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.getter.get
hide_title: true
title: Getter.get() method
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Getter](./my-lib.getter.md) &gt; [get](./my-lib.getter.get.md)

## Getter.get() method

**Signature:**

\`\`\`typescript
get(): string;
\`\`\`
**Returns:**

string

",
  "foo/my-lib.getter.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.getter
hide_title: true
title: Getter interface
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [Getter](./my-lib.getter.md)

## Getter interface

Gets a get

**Signature:**

\`\`\`typescript
export interface Getter 
\`\`\`

## Methods

|  Method | Description |
|  --- | --- |
|  [get()](./my-lib.getter.get.md) |  |

",
  "foo/my-lib.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib
hide_title: true
title: my-lib package
---
[Home](./index.md) &gt; [my-lib](./my-lib.md)

## my-lib package

## Interfaces

|  Interfaces | Description | Import Path |
|  --- | --- | --- |
|  [Getter](./my-lib.getter.md) | Gets a get |  |

## Variables

|  Variables | Description | Import Path |
|  --- | --- | --- |
|  [foo](./my-lib.foo.md) | **_(BETA)_** some thing is beta |  |

## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Get](./my-lib.get.md) | A Get class to get an empty string |  |

## Functions

|  Functions | Description | Import Path |
|  --- | --- | --- |
|  [x(y)](./my-lib.x.md) | creates a frozen Getter |  |

",
  "foo/my-lib.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.sum
hide_title: true
title: sum() function
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [sum](./my-lib.sum.md)

## sum() function

Sum two numbers

**Signature:**

\`\`\`typescript
export declare function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | a number to add |
|  b | number | a number to add a to |

**Returns:**

number

the sum of A plus B.

",
  "foo/my-lib.x.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: my-lib.x
hide_title: true
title: x() function
---
[Home](./index.md) &gt; [my-lib](./my-lib.md) &gt; [x](./my-lib.x.md)

## x() function

creates a frozen Getter

**Signature:**

\`\`\`typescript
export declare function x(y: Record<string, Record<string, unknown>>): Readonly<Y>;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  y | Record&lt;string, Record&lt;string, unknown&gt;&gt; |  |

**Returns:**

Readonly&lt;Y&gt;


",
}
`;

exports[`can generate a sidebar by default 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "label": "Overview",
      },
      Object {
        "items": Array [
          Object {
            "id": "addon",
            "label": "Overview",
          },
          Object {
            "items": Array [
              Object {
                "id": "addon.component",
                "label": "Overview",
              },
              Object {
                "id": "addon.component._constructor_",
                "label": "(constructor)",
              },
              Object {
                "id": "addon.component.args",
                "label": "args",
              },
            ],
            "label": "Component",
          },
          Object {
            "id": "addon.enumeratedtype",
            "label": "EnumeratedType",
          },
          Object {
            "items": Array [
              Object {
                "id": "addon.stepper",
                "label": "Overview",
              },
              Object {
                "id": "addon.stepper.foo",
                "label": "foo",
              },
              Object {
                "id": "addon.stepper.render",
                "label": "render",
              },
            ],
            "label": "Stepper",
          },
          Object {
            "id": "addon.steppersignature",
            "label": "StepperSignature",
          },
          Object {
            "id": "addon.sum",
            "label": "sum",
          },
        ],
        "label": "addon",
      },
    ],
    "label": "Packages",
  },
]
`;

exports[`classes 1`] = `
Object {
  "foo/addon.bam.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bam
hide_title: true
title: Bam class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bam](./addon.bam.md)

## Bam class


**Signature:**

\`\`\`typescript
export declare class Bam extends Baz implements Renderer 
\`\`\`
**Extends:** [Baz](./addon.baz.md)

**Implements:** [Renderer](./addon.renderer.md)

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [render()](./addon.bam.render.md) |  |  |

",
  "foo/addon.bam.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bam.render
hide_title: true
title: Bam.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bam](./addon.bam.md) &gt; [render](./addon.bam.render.md)

## Bam.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.baz._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz._constructor_
hide_title: true
title: Baz.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md) &gt; [(constructor)](./addon.baz._constructor_.md)

## Baz.(constructor)

Constructs a new instance of the \`Baz\` class

**Signature:**

\`\`\`typescript
constructor(name: string);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  name | string |  |

",
  "foo/addon.baz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz
hide_title: true
title: Baz class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md)

## Baz class


**Signature:**

\`\`\`typescript
export declare class Baz extends Bizz 
\`\`\`
**Extends:** [Bizz](./addon.bizz.md)

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(name)](./addon.baz._constructor_.md) |  | Constructs a new instance of the <code>Baz</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [myName](./addon.baz.myname.md) |  | string |  |

",
  "foo/addon.baz.myname.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz.myname
hide_title: true
title: Baz.myName property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md) &gt; [myName](./addon.baz.myname.md)

## Baz.myName property

**Signature:**

\`\`\`typescript
myName: string;
\`\`\`
",
  "foo/addon.bizz.id.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bizz.id
hide_title: true
title: Bizz.id property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bizz](./addon.bizz.md) &gt; [id](./addon.bizz.id.md)

## Bizz.id property

**Signature:**

\`\`\`typescript
id: number;
\`\`\`
",
  "foo/addon.bizz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bizz
hide_title: true
title: Bizz class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bizz](./addon.bizz.md)

## Bizz class


**Signature:**

\`\`\`typescript
export declare class Bizz 
\`\`\`

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [id](./addon.bizz.id.md) |  | number |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Bizz](./addon.bizz.md) |  |  |

## Interfaces

|  Interfaces | Description | Import Path |
|  --- | --- | --- |
|  [Renderer](./addon.renderer.md) |  |  |

",
  "foo/addon.renderer.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.renderer
hide_title: true
title: Renderer interface
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Renderer](./addon.renderer.md)

## Renderer interface


**Signature:**

\`\`\`typescript
export interface Renderer 
\`\`\`

## Methods

|  Method | Description |
|  --- | --- |
|  [render()](./addon.renderer.render.md) |  |

",
  "foo/addon.renderer.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.renderer.render
hide_title: true
title: Renderer.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Renderer](./addon.renderer.md) &gt; [render](./addon.renderer.render.md)

## Renderer.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`delegate can be used to customize frontmatter 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component.(constructor) -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component.args property -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component class -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.enumeratedtype.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: EnumeratedType enum -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [EnumeratedType](./addon.enumeratedtype.md)

## EnumeratedType enum

An enumerated property.

**Signature:**

\`\`\`typescript
export declare enum EnumeratedType
\`\`\`

## Enumeration Members

|  Member | Value | Description |
|  --- | --- | --- |
|  BAR | <code>&quot;bar&quot;</code> | Bar. |
|  FOO | <code>&quot;foo&quot;</code> | Foo. |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: addon package -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Enums

|  Enums | Description | Import Path |
|  --- | --- | --- |
|  [EnumeratedType](./addon.enumeratedtype.md) | An enumerated property. |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper.foo() method -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper Component -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper.render() method -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: StepperSignature Component Signature -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: sum() Helper -- CUSTOM THINGY
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: API Reference -- CUSTOM THINGY
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`delegate can be used to customize the page 1`] = `
Object {
  "foo/index.md": "\`\`\`typescript
const foo = \\"Bar\\";
\`\`\`
",
}
`;

exports[`delegate can be used to register custom nodes 1`] = `
Object {
  "foo/index.md": "🎉 NEAT 🎉
",
}
`;

exports[`delegate can be used to register custom nodes that require recursion 1`] = `
Object {
  "foo/index.md": " 🎉 FUN 🎉 🎉 TIME 🎉 🎉 CONTAINER 🎉 🎉 CHILDREN 🎉
",
}
`;

exports[`frameworkItemType 1`] = `
Object {
  "foo/addon.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bar
hide_title: true
title: Bar Widget
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bar](./addon.bar.md)

## Bar Widget

**Signature:**

\`\`\`typescript
export declare class Bar 
\`\`\`

## Remarks

A widget for widgetting

## Example


\`\`\`ts
const bar = new Bar();
\`\`\`

",
  "foo/addon.baz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz
hide_title: true
title: Baz Thingy
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md)

## Baz Thingy

**Signature:**

\`\`\`typescript
export declare class Baz 
\`\`\`

## Remarks

A thingy for thingying

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Widgets

|  Widgets | Description | Import Path |
|  --- | --- | --- |
|  [Bar](./addon.bar.md) |  |  |

## Thingies

|  Thingies | Description | Import Path |
|  --- | --- | --- |
|  [Baz](./addon.baz.md) |  |  |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`functions 1`] = `
Object {
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`if a custom delegate is passed with only the required fields the default implementation runs for the methods 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.enumeratedtype.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.enumeratedtype
hide_title: true
title: EnumeratedType enum
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [EnumeratedType](./addon.enumeratedtype.md)

## EnumeratedType enum

An enumerated property.

**Signature:**

\`\`\`typescript
export declare enum EnumeratedType
\`\`\`

## Enumeration Members

|  Member | Value | Description |
|  --- | --- | --- |
|  BAR | <code>&quot;bar&quot;</code> | Bar. |
|  FOO | <code>&quot;foo&quot;</code> | Foo. |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Enums

|  Enums | Description | Import Path |
|  --- | --- | --- |
|  [EnumeratedType](./addon.enumeratedtype.md) | An enumerated property. |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`interfaces 1`] = `
Object {
  "foo/addon.baz.id.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz.id
hide_title: true
title: Baz.id property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md) &gt; [id](./addon.baz.id.md)

## Baz.id property

**Signature:**

\`\`\`typescript
id: number;
\`\`\`
",
  "foo/addon.baz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz
hide_title: true
title: Baz interface
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md)

## Baz interface


**Signature:**

\`\`\`typescript
export interface Baz 
\`\`\`

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [id](./addon.baz.id.md) | number |  |

",
  "foo/addon.biz.bam.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.biz.bam
hide_title: true
title: Biz.bam property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Biz](./addon.biz.md) &gt; [bam](./addon.biz.bam.md)

## Biz.bam property

**Signature:**

\`\`\`typescript
bam: T;
\`\`\`
",
  "foo/addon.biz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.biz
hide_title: true
title: Biz interface
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Biz](./addon.biz.md)

## Biz interface


**Signature:**

\`\`\`typescript
export interface Biz<T = Foo> 
\`\`\`

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [bam](./addon.biz.bam.md) | T |  |
|  [name](./addon.biz.name.md) | string |  |

",
  "foo/addon.biz.name.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.biz.name
hide_title: true
title: Biz.name property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Biz](./addon.biz.md) &gt; [name](./addon.biz.name.md)

## Biz.name property

**Signature:**

\`\`\`typescript
name: string;
\`\`\`
",
  "foo/addon.foo.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.foo.bar
hide_title: true
title: Foo.bar property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Foo](./addon.foo.md) &gt; [bar](./addon.foo.bar.md)

## Foo.bar property

**Signature:**

\`\`\`typescript
bar: string;
\`\`\`
",
  "foo/addon.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.foo
hide_title: true
title: Foo interface
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Foo](./addon.foo.md)

## Foo interface


**Signature:**

\`\`\`typescript
export interface Foo extends Baz 
\`\`\`

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [bar](./addon.foo.bar.md) | string |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Interfaces

|  Interfaces | Description | Import Path |
|  --- | --- | --- |
|  [Foo](./addon.foo.md) |  |  |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`it defaults to built in delegate 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.enumeratedtype.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.enumeratedtype
hide_title: true
title: EnumeratedType enum
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [EnumeratedType](./addon.enumeratedtype.md)

## EnumeratedType enum

An enumerated property.

**Signature:**

\`\`\`typescript
export declare enum EnumeratedType
\`\`\`

## Enumeration Members

|  Member | Value | Description |
|  --- | --- | --- |
|  BAR | <code>&quot;bar&quot;</code> | Bar. |
|  FOO | <code>&quot;foo&quot;</code> | Foo. |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Enums

|  Enums | Description | Import Path |
|  --- | --- | --- |
|  [EnumeratedType](./addon.enumeratedtype.md) | An enumerated property. |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`kitchen sink 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.enumeratedtype.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.enumeratedtype
hide_title: true
title: EnumeratedType enum
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [EnumeratedType](./addon.enumeratedtype.md)

## EnumeratedType enum

An enumerated property.

**Signature:**

\`\`\`typescript
export declare enum EnumeratedType
\`\`\`

## Enumeration Members

|  Member | Value | Description |
|  --- | --- | --- |
|  BAR | <code>&quot;bar&quot;</code> | Bar. |
|  FOO | <code>&quot;foo&quot;</code> | Foo. |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Enums

|  Enums | Description | Import Path |
|  --- | --- | --- |
|  [EnumeratedType](./addon.enumeratedtype.md) | An enumerated property. |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`modulePath 1`] = `
Object {
  "foo/addon.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bar
hide_title: true
title: Bar class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bar](./addon.bar.md)

## Bar class

### Import Path: addon/this/was/a/bad/idea

**Signature:**

\`\`\`typescript
export declare class Bar 
\`\`\`

## Remarks

A widget for widgetting

## Example


\`\`\`ts
const bar = new Bar();
\`\`\`

",
  "foo/addon.baz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz
hide_title: true
title: Baz class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md)

## Baz class

### Import Path: addon/deeply/nested/mess

**Signature:**

\`\`\`typescript
export declare class Baz 
\`\`\`

## Remarks

A thingy for thingying

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Baz](./addon.baz.md) |  | addon/deeply/nested/mess |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`packageDocumentation 1`] = `
Object {
  "foo/addon.a.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.a
hide_title: true
title: a variable
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [a](./addon.a.md)

## a variable


**Signature:**

\`\`\`typescript
a = \\"\\"
\`\`\`
",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

Some docs

## Remarks

This is a remarks section

## Variables

|  Variables | Description | Import Path |
|  --- | --- | --- |
|  [a](./addon.a.md) |  |  |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) | Some docs |

",
}
`;

exports[`retains custom information on nodes given a visitor 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "label": "Overview",
      },
      Object {
        "items": Array [
          Object {
            "id": "addon",
            "label": "Overview",
          },
          Object {
            "collapsed": false,
            "items": Array [
              Object {
                "label": "Summary",
              },
              Object {
                "id": "addon.component._constructor_",
                "label": "(constructor)",
              },
              Object {
                "id": "addon.component.args",
                "label": "args",
              },
            ],
            "label": "Component",
          },
          Object {
            "id": "addon.enumeratedtype",
            "label": "EnumeratedType",
          },
          Object {
            "collapsed": false,
            "items": Array [
              Object {
                "label": "Summary",
              },
              Object {
                "id": "addon.stepper.foo",
                "label": "foo",
              },
              Object {
                "id": "addon.stepper.render",
                "label": "render",
              },
            ],
            "label": "Stepper",
          },
          Object {
            "id": "addon.steppersignature",
            "label": "StepperSignature",
          },
          Object {
            "id": "thing",
            "label": "sum",
            "thinging": "thing",
          },
        ],
        "label": "addon",
      },
    ],
    "label": "Packages",
  },
]
`;

exports[`type alias 1`] = `
Object {
  "foo/addon.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bar
hide_title: true
title: Bar type alias
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bar](./addon.bar.md)

## Bar type alias


**Signature:**

\`\`\`typescript
export declare type Bar = Partial<Record<string, unknown>>;
\`\`\`
",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## TypeAliases

|  TypeAliases | Description | Import Path |
|  --- | --- | --- |
|  [Bar](./addon.bar.md) |  |  |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`variable 1`] = `
Object {
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Variables

|  Variables | Description | Import Path |
|  --- | --- | --- |
|  [myVaR](./addon.myvar.md) |  |  |

",
  "foo/addon.myvar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.myvar
hide_title: true
title: myVaR variable
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [myVaR](./addon.myvar.md)

## myVaR variable


**Signature:**

\`\`\`typescript
myVaR: number
\`\`\`
",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;
